@@ -2,20 +2,19 @@ package net.minestom.server.network.packet.server.play;
 
 import net.kyori.adventure.text.Component;
 import net.minestom.server.adventure.ComponentHolder;
+import net.minestom.server.network.NetworkBuffer;
 import net.minestom.server.network.packet.server.ComponentHoldingServerPacket;
 import net.minestom.server.network.packet.server.ServerPacket;
 import net.minestom.server.network.packet.server.ServerPacketIdentifier;
-import net.minestom.server.utils.binary.BinaryReader;
-import net.minestom.server.utils.binary.BinaryWriter;
-import net.minestom.server.utils.binary.Writeable;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.UnaryOperator;
+
+import static net.minestom.server.network.NetworkBuffer.*;
 
 public record TabCompletePacket(int transactionId, int start, int length,
                                 @NotNull List<Match> matches) implements ComponentHoldingServerPacket {
@@ -23,16 +22,16 @@ public record TabCompletePacket(int transactionId, int start, int length,
         matches = List.copyOf(matches);
     }
 
-    public TabCompletePacket(BinaryReader reader) {
-        this(reader.readVarInt(), reader.readVarInt(), reader.readVarInt(), reader.readVarIntList(Match::new));
+    public TabCompletePacket(@NotNull NetworkBuffer reader) {
+        this(reader.read(VAR_INT), reader.read(VAR_INT), reader.read(VAR_INT), reader.readCollection(Match::new));
     }
 
     @Override
-    public void write(@NotNull BinaryWriter writer) {
-        writer.writeVarInt(transactionId);
-        writer.writeVarInt(start);
-        writer.writeVarInt(length);
-        writer.writeVarIntList(matches, BinaryWriter::write);
+    public void write(@NotNull NetworkBuffer writer) {
+        writer.write(VAR_INT, transactionId);
+        writer.write(VAR_INT, start);
+        writer.write(VAR_INT, length);
+        writer.writeCollection(matches);
     }
 
     @Override
@@ -42,7 +41,7 @@ public record TabCompletePacket(int transactionId, int start, int length,
 
     @Override
     public @NotNull Collection<Component> components() {
-        if (matches.isEmpty()) return Collections.emptyList();
+        if (matches.isEmpty()) return List.of();
         List<Component> components = new ArrayList<>(matches.size());
         for (Match match : matches) {
             if (match.tooltip != null) {
@@ -61,21 +60,20 @@ public record TabCompletePacket(int transactionId, int start, int length,
     }
 
     public record Match(@NotNull String match,
-                        @Nullable Component tooltip) implements Writeable, ComponentHolder<Match> {
-        public Match(BinaryReader reader) {
-            this(reader.readSizedString(), reader.readBoolean() ? reader.readComponent() : null);
+                        @Nullable Component tooltip) implements NetworkBuffer.Writer, ComponentHolder<Match> {
+        public Match(@NotNull NetworkBuffer reader) {
+            this(reader.read(STRING), reader.read(BOOLEAN) ? reader.read(COMPONENT) : null);
         }
 
         @Override
-        public void write(@NotNull BinaryWriter writer) {
-            writer.writeSizedString(match);
-            writer.writeBoolean(tooltip != null);
-            if (tooltip != null) writer.writeComponent(tooltip);
+        public void write(@NotNull NetworkBuffer writer) {
+            writer.write(STRING, match);
+            writer.writeOptional(COMPONENT, tooltip);
         }
 
         @Override
         public @NotNull Collection<Component> components() {
-            return tooltip != null ? Collections.singletonList(tooltip) : Collections.emptyList();
+            return tooltip != null ? List.of(tooltip) : List.of();
         }
 
         @Override
